--- a/bd2/composer.json
+++ b/bd2/composer.json
@@ -10,7 +10,8 @@
         "laravel-doctrine/orm": "1.4.*",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "khill/lavacharts" : "3.0.*"
+        "khill/lavacharts" : "3.0.*",
+        "laravelcollective/html" : "^5.4"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
